<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignupActivity">
    <TextView
        android:id="@+id/tv_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/regis"
        android:textColor="@color/pink"
        android:textSize="36sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_signup"
        android:alpha="1"
        android:layout_width="279dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_home" />

    <TextView
        android:id="@+id/tv_r_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:alpha="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_signup"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteY="242dp" />

    <com.bangkit.resep.customview.CVClearEditText
        android:id="@+id/ed_r_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:alpha="1"
        android:textColorHint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_r_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_r_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:alpha="1"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_r_name" />

    <com.bangkit.resep.customview.CVEmailEditText
        android:id="@+id/ed_r_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:padding="16dp"
        android:textColorHint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_r_email"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_r_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:alpha="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_r_email" />

    <com.bangkit.resep.customview.CVPasswordEditText
        android:id="@+id/ed_r_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:padding="16dp"
        android:textColorHint="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_r_password"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/regis_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:backgroundTint="@color/pink"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/regis"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_r_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>